--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,54 +1,104 @@
-.container-parent{
-    display: flex;
-    font-size: 14px;
+.container-parent {
+  display: flex;
+  width: 50%;
+  padding: 10px 0px 40px 7%;
+}
+.container-footer {
+  display: flex;
+  background-color: var(--secondnavbarbackgroundcolor);
+  color: var(--secondnavbarcolor);
+}
+.input-field {
+  display: flex;
+  padding-left: 25%;
+  padding-top: 20px;
+}
+li {
+  list-style: none;
+  padding: 5px;
+  cursor: pointer;
+}
+li:hover {
+  text-decoration: underline;
+}
+.link {
+  text-decoration: none;
+  color: var(--secondnavbarcolor);
+}
+.select-different {
+  border: none;
+  color: var(--secondnavbarcolor);
+  background-color: #f0f0f0;
+  font-weight: 500;
+  width: 24%;
+  margin-top: 30px;
+}
+.input-field {
+  width: 40%;
+}
+.input-inner {
+  width: 220px;
+  height: 31px;
+  padding: 0px 4px 0px 4px;
+}
+.email_button {
+  height: 35px;
+  width: 98px;
+  background-color: var(--buttonbackgroundcolor);
+  border: 1px solid var(--buttonbackgroundcolor);
+  color: var(--navbarcolor);
+  cursor: pointer;
+}
+
+@media  (min-width:320px) and (max-width:480px) {
+    .container-parent {
+        display: flex;
+        flex-direction: column-reverse;
+        padding: 0px;
+    }
+    .container-footer {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .input-field {
+        display: flex;
+        justify-content: center;
+        width: 94%;
+        padding: 20px 12px 20px 12px;
+        background-color: var(--navbarcolor);
     
+    }
+    .select-different {
+        width: 48%;
+        margin-top: 0px;
+    }
+    li:hover {
+        text-decoration: underline;
+      }
 }
-.ContainerMain{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top:20px ;
-    background-color: #f0f0f0;
-    height: 207px;
-}
-.menu-one-class{
-    padding-left: 120px;
-}
-.menu-two-class{
-    padding-left: 120px;
-}
-a{ 
-    text-decoration: none;
-    color:#575757;
+@media  (min-width:481px) and (max-width:768px) {
+    .container-parent {
+        display: flex;
+        flex-direction: column-reverse;
+        padding: 0px;
+    }
+    .container-footer {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .input-field {
+        display: flex;
+        justify-content: center;
+        width: 94%;
+        padding: 20px 12px 20px 12px;
+        background-color: var(--navbarcolor);
     
-}
-li{
-list-style: none;
-}
-.select-different{
-    border:none;
-    color: #575757;
-    background-color:#f0f0f0;
-    font-size: 14px;
-    font-weight: 500;
-    margin-top: 30px;
-}
-.input-field{
-    padding-right: 150px;
-    padding-bottom: 150px;
-}
-.input-inner{
-    height: 26px;
-    width:220px;
-   
-}
-li{
-    margin-bottom: 10px;
-}
-button{
-    height: 32px;
-    width: 80px;
-    background-color: #006bb4;
-    color: white;
-    border: 2px solid #006bb4;
+    }
+    .select-different {
+        width: 48%;
+        margin-top: 0px;
+    }
+    li:hover {
+        text-decoration: underline;
+      }
 }
