--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -17,7 +17,9 @@
   
 }
 .review{
-  color:var(--linkcolor)
+  color:var(--linkcolor);
+  text-decoration: none;
+  
 }
 .parent-price{
   display: flex;
@@ -32,6 +34,7 @@
   display: flex;
   flex-direction: column;
   width: 35%;
+  align-items: flex-end;
 }
 .price{
   font-size: 36px;
@@ -64,6 +67,7 @@
 }
 .addtocart{
   background-color: var(--buttonbackgroundcolor);
+  border: 1px solid var(--buttonbackgroundcolor) ;
   padding: 14px 17px;
   height: 51.6px;
   width:227.04px;
@@ -79,7 +83,7 @@
   display: flex;
   align-items: center;
   letter-spacing: 0.05em;
-  width: 50%;
+  width: 80%;
  
 
 }
@@ -101,9 +105,17 @@
 
 
   }
+  .product-container{
+    padding-bottom: 50px;
+  }
+  .bagimage{
+    height: 320px;
+    width: 320px;
+  }
   .product-image{
     padding-right: 0px;
   padding-left: 0px;
+ 
   }
   .product-container{
     padding-left: 5px;
@@ -147,9 +159,17 @@
 
 
   }
+  .product-container{
+    padding-bottom: 50px;
+  }
+  .bagimage{
+    height: 375px;
+    width: 375px;
+  }
   .product-image{
     padding-right: 0px;
   padding-left: 0px;
+ 
   }
   .parent-price{
     width:100%;
@@ -173,7 +193,8 @@
 
 }
 .wishlist{
-  width:80%;
+  display: flex;
+  flex-direction: column;
   margin: 0 auto;
 }
 
@@ -183,3 +204,23 @@
 
 }
 
+@media  (min-width:769px) and (max-width:1204px) {
+
+  .bagimage{
+    height: 375px;
+    width: 375px;
+    padding-right: 20px;
+  }
+  .product-image{
+    padding-right: 0px;
+  padding-left: 50px;
+ 
+  }
+  .price-tag{
+    width: 50%;
+  }
+  .wishlist{
+    display: flex;
+    flex-direction: column;
+  }
+}
