--- a/src/components/Otherproducts/otherProducts.css
+++ b/src/components/Otherproducts/otherProducts.css
@@ -1,20 +1,40 @@
 .productimage{
     width:152px;
-    height: 190px;
+    height: 170px;
 }
 .parent-container{
     height: 100%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 50px;
+    align-items:start;
+    gap: 30px;
     
     
     
     
 }
 .product-display-info:hover{
-border:2px solid var(--linkname);
+border:1px solid #bbbbbb;
+box-shadow:3px 4px 4px 0 rgba(0, 0, 0, 0.3);
+}
+.product-display-info{
+    padding: 20px 10px 20px 10px;
+}
+.priceFrom{
+    font-weight: bolder;
+}
+.priceTo{
+    font-weight: bolder;
+}
+.message{
+font-weight: bolder;
+padding:0px 0px 30px 10px;
+}
+@media  (min-width:320px) and (max-width:480px) {
+    .parent-container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
