--- a/src/components/Otherproducts/otherProducts.css
+++ b/src/components/Otherproducts/otherProducts.css
@@ -2,17 +2,28 @@
     width:152px;
     height: 170px;
 }
-.parent-container{
+.parent-container-product{
     height: 100%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     align-items:start;
-    gap: 30px;
+    gap: 25px;
+    justify-content: center;
+    padding-bottom: 10px;
     
     
     
     
+}
+.container-product{
+    box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1280px;
+  padding-left: 20px;
+  padding-right: 20px;
+  width: auto;
 }
 .product-display-info:hover{
 border:1px solid #bbbbbb;
@@ -29,12 +40,13 @@ box-shadow:3px 4px 4px 0 rgba(0, 0, 0, 0.3);
 }
 .message{
 font-weight: bolder;
-padding:0px 0px 30px 10px;
+padding:0px 0px 30px 40px;
 }
 @media  (min-width:320px) and (max-width:480px) {
-    .parent-container{
+    .parent-container-product{
         display: flex;
         align-items: center;
         justify-content: center;
+        
     }
 }
