--- a/src/components/NavBar/navBar.css
+++ b/src/components/NavBar/navBar.css
@@ -1,20 +1,32 @@
-.navbar {
+
+.navyaNav{
   background-color: var(--navbackground);
-  /* height: 50px; */
+
+}
+.navbar {
+  box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1280px;
+  padding-left: 20px;
+  padding-right: 20px;
+  width: auto;
+}
+
+.nav-container{
   display: flex;
   justify-content: flex-end;
   align-items: center;
   font-size: 14px;
-  /* position: sticky; */
   top: 0;
 }
-
 
 .nav-menu {
   display: flex;
   list-style: none;
   text-align: center;
 }
+
 
 .nav-links {
   color: var(--navbarcolor);
