--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -114,6 +114,56 @@
   padding-bottom: 0px;
 }
 
+.product-info-more-button{
+  font-weight: 400;
+  line-height: 40px;
+  font-size: 1.4rem;
+  color: #6d6d6d;
+  background: #f6f6f6;
+  border: 1px solid #ccc;
+  border-bottom: none;
+  height: 40px;
+  padding: 1px 35px 1px 35px;
+  font-size: 14px;
+}
+
+.product-info-description{
+  background: #fff;
+    /* margin-top: 43px; */
+    padding: 35px 35px 35px 35px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+}
+.order-list-info{
+  list-style: none;
+}
+.list-item-header{
+  font-weight: 300;
+    line-height: 1.1;
+    font-size: 2.6rem;
+    margin-top: 2.5rem;
+    margin-bottom: 2rem;
+}
+.review-header{
+  font-weight: 600;
+  line-height: 1.1;
+  font-size: 1.8rem;
+  margin: 0 0 30px;
+}
+.column-head{
+  padding: 5.5px 30px 10px 0;
+  float: left;
+  
+}
+.column-data{
+padding: 5.5px 5px 10px 5px;
+color:#333333;
+font-weight: 500;
+}
+.list-item-info{
+  list-style: none;
+}
+
 @media  (min-width:320px) and (max-width:480px) {
   .product-display{
     display: flex;
